PointsScales can be created and get (without id)
